Update - Up to 5.40

--- a/Index.html
+++ b/Index.html
@@ -4,8 +4,19 @@
     <meta charset="utf-8">
     <title>Chris Gross</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="favicon.ico">
   </head>
   <body>
+    <div class="top">
+      <h1>I'm Chris</h1>
+      <p>This is my website</p>
+    </div>
+
+    <div class="mid square">
+    </div>
+
+    <div class="bot square">
+    </div>
 
   </body>
 </html>
