--- a/Index.html
+++ b/Index.html
@@ -5,11 +5,15 @@
     <title>Chris Gross</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="favicon.ico">
+    <link href="https://fonts.googleapis.com/css?family=Dosis|Indie+Flower|Raleway" rel="stylesheet">
   </head>
   <body>
     <div class="top">
+      <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
       <h1>I'm Chris</h1>
       <p>This is my website</p>
+      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+      <img class="mountain" src="images/mountain.png" alt="mountain-img">
     </div>
 
     <div class="mid square">
