Up to and including 5.55

--- a/Index.html
+++ b/Index.html
@@ -2,25 +2,58 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Chris Gross</title>
+    <title>Red Leader</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Dosis|Indie+Flower|Raleway" rel="stylesheet">
   </head>
   <body>
-    <div class="top">
+    <div class="top-container">
       <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
-      <h1>I'm Chris</h1>
-      <p>This is my website</p>
+      <h1>I'm Red Leader</h1>
+      <h2 class="subtitle">This is my website</h2>
       <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
       <img class="mountain" src="images/mountain.png" alt="mountain-img">
     </div>
 
-    <div class="mid square">
+    <div class="mid-container">
+      <div class="profile">
+        <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/google/146/rocket_1f680.png" alt="profile-img">
+        <h2>Hello.</h2>
+        <p>My name is Red Leader and I am standing by.</p>
+      </div>
+      <hr>
+      <div class="skills">
+        <h2>My Skills.</h2>
+        <div class="skill-row">
+          <img class="skill-img web-dev-img" src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/samsung/148/personal-computer_1f4bb.png" alt="web-dev-img">
+          <h3>HTML & CSS</h3>
+          <p class="web-dev-text">I'm using basic HTML and CSS to build this website. No Javascript yet!</p>
+        </div>
+        <div class="skill-row">
+          <img class="skill-img cooking-img" src="https://media.giphy.com/media/rSVxAtLhsQ9LW/giphy.gif" alt="cooking-img">
+          <h3>Cooking</h3>
+          <p class="cooking-text">I'm very good at cooking. I can use at least six ingredients to make at least four meals with at least two pieces of equipment!</p>
+        </div>
+      </div>
+
+      <hr>
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3>I would love to hear from you</h3>
+        <p>But these links don't work</p>
+        <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+      </div>
     </div>
 
-    <div class="bot square">
+
+    <div class="bot-container">
+      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+      <a class="footer-link" href="https://twitter.com/">Twitter</a>
+      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <p>© 2018 Red Leader.</p>
     </div>
+
 
   </body>
 </html>
