--- a/Index.html
+++ b/Index.html
@@ -23,6 +23,8 @@
         <p>My name is Red Leader and I am standing by.</p>
       </div>
       <hr>
+
+  <!-- Hide old skills code in case need it...
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row">
@@ -35,23 +37,47 @@
           <h3>Cooking</h3>
           <p class="cooking-text">I'm very good at cooking. I can use at least six ingredients to make at least four meals with at least two pieces of equipment!</p>
         </div>
-      </div>
+-->
+
+      <div class="skills">
+        <h2>My Skills.</h2>
+        <div class="skill-row">
+          <table>
+            <tr>
+              <td><img class="skill-img web-dev-img2" src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/samsung/148/personal-computer_1f4bb.png" alt="web-dev-img"></td>
+              <td>
+                <h3>HTML & CSS</h3>
+                <p class="web-dev-text">I'm using basic HTML and CSS to build this website. No Javascript yet!</p>
+              </td>
+            </tr>
+          </table>
+          <table>
+            <tr>
+              <td>
+                <h3>Cooking</h3>
+                <p class="cooking-text">I'm very good at cooking. I can use at least six ingredients to make at least four meals with at least two pieces of equipment!</p>
+              </td>
+              <td><img class="skill-img cooking-img2" src="https://media.giphy.com/media/rSVxAtLhsQ9LW/giphy.gif" alt="cooking-img"></td>
+            </tr>
+          </table>
+        </div>
 
       <hr>
       <div class="contact-me">
         <h2>Get In Touch</h2>
         <h3>I would love to hear from you</h3>
         <p>But these links don't work</p>
-        <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+        <a class="butn" href="mailto:name@email.com">CONTACT ME</a>
       </div>
     </div>
+  </div>
 
 
     <div class="bot-container">
       <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
       <a class="footer-link" href="https://twitter.com/">Twitter</a>
       <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-      <p>© 2018 Red Leader.</p>
+      <p class="footer-text">© 2018 Red Leader.</p>
     </div>
 
 
